# AirRelay

./: .env.example  .gitignore  Dockerfile  LICENSE  README.en.md  README.md  docker-compose.yml  justfile  pyproject.toml  requirements.txt
docs/: README.md  api_protocol.md  device_integration.md  implementation_guide.md  system_overview.md  telethon_group_topic.md
luatos/: README.md  config.lua.example  main.lua
src/: __main__.py
src/bot/: telegram.py
src/db/: workers_kv.py
src/models/: schemas.py
src/mqtt/: client.py
tests/simulators/: README.md  air780e_simulator.py  send_sms.py
